--- a/src/components/StudentCorner/ProjectUpload/ProjectUpload.css
+++ b/src/components/StudentCorner/ProjectUpload/ProjectUpload.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     
         max-width: 100%;
         margin: 0 auto;
@@ -14,4 +14,4 @@ body{
         bottom: 0;
         min-width: 100%;
         min-height: 100%;
-      }
+      } */
